// $Id: CHANGELOG.txt,v 1.137 2009/09/07 10:04:13 johnalbin Exp $

Zen 6.x-2.x-dev, xxxx-xx-xx (development release)
------------------------
- * Render $edit_links_array in zen_process_block
- #546858: Add THEME_process_HOOK functions to Zen
- #317417 by JohnAlbin and quicksketch: Fix off-line maintenance page since drupal_get_path('theme', 'zen') won't work
- #549798 by caroltron: page-backgrounds.css missing from .info file
- Remove ie5.css from STARTERKIT and deprecate support for IE5
- #547696: Update node.tpl to use ideas from D7
- Renamed $picture to $user_picture in node.tpl.php
- Renamed sticky class to node-sticky in node.tpl.php
- Added $build_mode variable to node.tpl.php
- #445814: Change primary/secondary link rendering and move secondary menu to footer
- #445822: Simplify wrapper divs around logo, site name, slogan
- #546862: Add D7's element-hidden and element-invisible for accessibility features
- #547382: Rename Zen's reset stylesheet to html-reset.css from html-elements.css
- #527494: Follow Drupal's proposed CSS coding standards
- #480610 by kdebaas: css class .field-type-image does not exist anymore in 6.x version of the module
- #545320 by Deslack: Use of split() generate E_DEPRECATED warnings on PHP 5.3.0
- #542818: Using alternate layout method causes .clearfix class to disappear
- #546828: Move tpl.php files to a templates folder in the root zen directory
- #546792: Remove box.tpl.php
- #513926: Sub-themes cannot reorder the stylesheets of the base theme
- #456136: Move zen stylesheets into STARTERKIT/css

Zen 6.x-2.0-alpha1, 2009-08-11
------------------------------
- #544750 by kdebaas: Wrong sidebar class naming in maintenance-page.tpl.php
- #529796: Make block edit links easier to edit/turn off individually
- Added $classes_array variable to node, block and comment templates
- Add layout.css in Zen's .info file to properly position sub-theme's layout.css
- #379902: Make all stylesheets RTL compatible