@@ -1,4 +1,4 @@
-/* $Id: layout-liquid.css,v 1.6 2009/08/12 22:17:26 johnalbin Exp $ */
+/* $Id: layout-liquid.css,v 1.7 2009/10/15 15:48:20 johnalbin Exp $ */
 
 /**
  * @file
@@ -88,7 +88,7 @@ body {
 #search-box {
 }
 
-#header-blocks {
+.region-header {
   clear: both; /* Clear the logo */
 }
 
@@ -142,7 +142,7 @@ body {
   width: 100%;
   margin-left: 0; /* LTR */
   margin-right: -100%; /* LTR */ /* Negative value of #navbar's width + left margin. */
-  padding: 0; /* DO NOT CHANGE. Add padding or margin to #navbar-inner. */
+  padding: 0; /* DO NOT CHANGE. Add padding or margin to .region-navbar. */
   height: 2.3em; /* The navbar can have any arbritrary height. We picked one
                     that is the line-height plus 1em: 1.3 + 1 = 2.3
                     Set this to the same value as the margin-top below. */
@@ -154,7 +154,7 @@ body {
   margin-top: 2.3em; /* Set this to the same value as the navbar height above. */
 }
 
-#navbar-inner {
+.region-navbar {
 }
 
 #navbar ul /* Primary and secondary links */ {
@@ -206,7 +206,7 @@ body {
 #footer {
 }
 
-#footer-inner {
+.region-footer {
 }
 
 /*
