@@ -1,4 +1,4 @@
-/* $Id: navigation.css,v 1.3 2009/08/12 22:17:26 johnalbin Exp $ */
+/* $Id: navigation.css,v 1.4 2009/10/15 15:48:20 johnalbin Exp $ */
 
 /**
  * @file
@@ -19,7 +19,7 @@ li a.active {
 #navbar {
 }
 
-#navbar-inner {
+.region-navbar {
 }
 
 /*
