@@ -1,4 +1,4 @@
-/* $Id: page-backgrounds.css,v 1.3 2009/08/12 08:37:42 johnalbin Exp $ */
+/* $Id: page-backgrounds.css,v 1.4 2009/10/15 15:48:20 johnalbin Exp $ */
 
 /**
  * @file
@@ -36,5 +36,5 @@ body {
 #footer {
 }
 
-#footer-inner {
+.region-footer {
 }
