@@ -1,4 +1,4 @@
-/* $Id: wireframes.css,v 1.2 2009/08/12 08:03:53 johnalbin Exp $ */
+/* $Id: wireframes.css,v 1.3 2009/10/15 15:48:20 johnalbin Exp $ */
 
 /**
  * @file
@@ -11,10 +11,10 @@
 .with-wireframes #header-inner,
 .with-wireframes #content-inner,
 .with-wireframes #content-inner>*,
-.with-wireframes #navbar-inner,
+.with-wireframes .region-navbar,
 .with-wireframes #sidebar-first-inner,
 .with-wireframes #sidebar-second-inner,
-.with-wireframes #footer-inner {
+.with-wireframes .region-footer {
   margin: 1px;
   padding: 2px;
   border: 1px solid #ccc;
