@@ -1,5 +1,5 @@
 <?php
-// $Id: template.php,v 1.31 2009/09/07 10:03:59 johnalbin Exp $
+// $Id: template.php,v 1.34 2009/10/15 20:22:57 johnalbin Exp $
 
 /**
  * @file
@@ -98,6 +98,58 @@ function zen_menu_local_tasks() {
   return $output;
 }
 
+/**
+ * Return a set of blocks available for the current user.
+ *
+ * @param $region
+ *   Which set of blocks to retrieve.
+ * @return
+ *   A string containing the themed blocks for this region.
+ */
+function zen_blocks($region) {
+  $output = '';
+
+  if ($list = block_list($region)) {
+    foreach ($list as $key => $block) {
+      // $key == module_delta
+      $output .= theme('block', $block);
+    }
+  }
+
+  // Add any content assigned to this region through drupal_set_content() calls.
+  $output .= drupal_get_content($region);
+
+  $elements['#children'] = $output;
+  $elements['#region'] = $region;
+
+  return $output ? theme('region', $elements) : '';
+}
+
+/**
+ * Override or insert variables into templates before other preprocess functions have run.
+ *
+ * @param $vars
+ *   An array of variables to pass to the theme template.
+ * @param $hook
+ *   The name of the template being rendered.
+ */
+function zen_preprocess(&$vars, $hook) {
+  // In D6, the page.tpl uses a different variable name to hold the classes.
+  $key = ($hook == 'page' || $hook == 'maintenance_page') ? 'body_classes' : 'classes';
+
+  // Create a D7-standard classes_array variable.
+  if (array_key_exists($key, $vars)) {
+    // Views (and possibly other modules) have templates with a $classes
+    // variable that isn't a string, so we leave those variables alone.
+    if (is_string($vars[$key])) {
+      $vars['classes_array'] = explode(' ', $vars[$key]);
+      unset($vars[$key]);
+    }
+  }
+  else {
+    $vars['classes_array'] = array($hook);
+  }
+}
 
 /**
  * Override or insert variables into the page templates.
@@ -120,15 +172,14 @@ function zen_preprocess_page(&$vars, $hook) {
 
   // Classes for body element. Allows advanced theming based on context
   // (home page, node of certain type, etc.)
-  $classes = explode(' ', $vars['body_classes']);
   // Remove the mostly useless page-ARG0 class.
-  if ($index = array_search(preg_replace('![^abcdefghijklmnopqrstuvwxyz0-9-_]+!s', '', 'page-'. drupal_strtolower(arg(0))), $classes)) {
-    unset($classes[$index]);
+  if ($index = array_search(preg_replace('![^abcdefghijklmnopqrstuvwxyz0-9-_]+!s', '', 'page-'. drupal_strtolower(arg(0))), $vars['classes_array'])) {
+    unset($vars['classes_array'][$index]);
   }
   if (!$vars['is_front']) {
     // Add unique class for each page.
     $path = drupal_get_path_alias($_GET['q']);
-    $classes[] = zen_id_safe('page-' . $path);
+    $vars['classes_array'][] = zen_id_safe('page-' . $path);
     // Add unique class for each website section.
     list($section, ) = explode('/', $path, 2);
     if (arg(0) == 'node') {
@@ -139,23 +190,21 @@ function zen_preprocess_page(&$vars, $hook) {
         $section = 'node-' . arg(2);
       }
     }
-    $classes[] = zen_id_safe('section-' . $section);
+    $vars['classes_array'][] = zen_id_safe('section-' . $section);
   }
   if (theme_get_setting('zen_wireframes')) {
-    $classes[] = 'with-wireframes'; // Optionally add the wireframes style.
+    $vars['classes_array'][] = 'with-wireframes'; // Optionally add the wireframes style.
   }
   // Add new sidebar classes in addition to Drupal core's sidebar-* classes.
   // This provides some backwards compatibility with Zen 6.x-1.x themes.
   if ($vars['layout'] != 'both') {
     $new_layout = ($vars['layout'] == 'left') ? 'first' : 'second';
-    if (array_search('sidebar-' . $vars['layout'], $classes)) {
-      $classes[] = 'sidebar-' . $new_layout;
+    if (array_search('sidebar-' . $vars['layout'], $vars['classes_array'])) {
+      $vars['classes_array'][] = 'sidebar-' . $new_layout;
     }
     // Replace core's $layout variable with our naming of sidebars.
     $vars['layout'] = $new_layout;
   }
-  $vars['body_classes_array'] = $classes;
-  $vars['body_classes'] = implode(' ', $classes); // Concatenate with spaces.
 }
 
 /**
@@ -217,32 +266,30 @@ function zen_preprocess_node(&$vars, $hook) {
   $vars['user_picture'] = $vars['picture'];
 
   // Special classes for nodes.
-  $classes = array('node');
   // Class for node type: "node-type-page", "node-type-story", "node-type-my-custom-type", etc.
-  $classes[] = zen_id_safe('node-type-' . $vars['type']);
+  $vars['classes_array'][] = zen_id_safe('node-type-' . $vars['type']);
   if ($vars['promote']) {
     $vars['classes_array'][] = 'node-promoted';
   }
   if ($vars['sticky']) {
-    $classes[] = 'node-sticky';
+    $vars['classes_array'][] = 'node-sticky';
   }
   if (!$vars['status']) {
-    $classes[] = 'node-unpublished';
+    $vars['classes_array'][] = 'node-unpublished';
     $vars['unpublished'] = TRUE;
   }
   else {
     $vars['unpublished'] = FALSE;
   }
   if ($vars['uid'] && $vars['uid'] == $GLOBALS['user']->uid) {
-    $classes[] = 'node-mine'; // Node is authored by current user.
+    $vars['classes_array'][] = 'node-mine'; // Node is authored by current user.
   }
   if ($vars['teaser']) {
-    $classes[] = 'node-teaser'; // Node is displayed as teaser.
+    $vars['classes_array'][] = 'node-teaser'; // Node is displayed as teaser.
   }
   if (isset($vars['preview'])) {
     $vars['classes_array'][] = 'node-preview';
   }
-  $vars['classes_array'] = $classes;
 }
 
 /**
@@ -259,6 +306,28 @@ function zen_preprocess_comment(&$vars, $hook) {
 }
 
 /**
+ * Preprocess variables for region.tpl.php
+ *
+ * Prepare the values passed to the theme_region function to be passed into a
+ * pluggable template engine. Uses the region name to generate a template file
+ * suggestions. If none are found, the default region.tpl.php is used.
+ *
+ * @see region.tpl.php
+ */
+function zen_preprocess_region(&$vars, $hook) {
+  // Create the $content variable that templates expect.
+  $vars['content'] = $vars['elements']['#children'];
+  $vars['region'] = $vars['elements']['#region'];
+
+  $region = 'region-' . str_replace('_', '-', $vars['region']);
+  $vars['classes_array'] = array('region', $region);
+  if ($vars['region'] == 'navbar') {
+    $vars['classes_array'][] = 'clearfix';
+  }
+  $vars['template_files'][] = $region;
+}
+
+/**
  * Override or insert variables into the block templates.
  *
  * @param $vars
@@ -270,22 +339,18 @@ function zen_preprocess_block(&$vars, $hook) {
   $block = $vars['block'];
 
   // Special classes for blocks.
-  $classes = array('block');
-  $classes[] = 'block-' . $block->module;
-  $classes[] = 'region-' . $vars['block_zebra'];
-  $classes[] = $vars['zebra'];
-  $classes[] = 'region-count-' . $vars['block_id'];
-  $classes[] = 'count-' . $vars['id'];
+  $vars['classes_array'][] = 'block-' . $block->module;
+  $vars['classes_array'][] = 'region-' . $vars['block_zebra'];
+  $vars['classes_array'][] = $vars['zebra'];
+  $vars['classes_array'][] = 'region-count-' . $vars['block_id'];
+  $vars['classes_array'][] = 'count-' . $vars['id'];
 
   $vars['edit_links_array'] = array();
   if (theme_get_setting('zen_block_editing') && user_access('administer blocks')) {
     include_once './' . _zen_path() . '/zen-internals/template.block-editing.inc';
     zen_preprocess_block_editing($vars, $hook);
-    $classes[] = 'with-block-editing';
+    $vars['classes_array'][] = 'with-block-editing';
   }
-
-  // Render block classes.
-  $vars['classes_array'] = $classes;
 }
 
 /**
@@ -297,14 +362,8 @@ function zen_preprocess_block(&$vars, $hook) {
  *   The name of the template being rendered.
  */
 function zen_process(&$vars, $hook) {
-  switch ($hook) {
-    case 'page':
-    case 'maintenance_page':
-      $vars['body_classes'] = !empty($vars['body_classes_array']) ? implode(' ', $vars['body_classes_array']) : '';
-      break;
-    default:
-      $vars['classes'] = !empty($vars['classes_array']) ? implode(' ', $vars['classes_array']) : '';
-      break;
+  if (array_key_exists('classes_array', $vars)) {
+    $vars['classes'] = implode(' ', $vars['classes_array']);
   }
 }
 
