@@ -1,5 +1,5 @@
 <?php
-// $Id: template.theme-registry.inc,v 1.3 2009/08/25 09:02:43 johnalbin Exp $
+// $Id: template.theme-registry.inc,v 1.4 2009/10/15 15:34:18 johnalbin Exp $
 
 /**
  * @file
@@ -60,7 +60,19 @@ function _zen_theme(&$existing, $type, $theme, $path) {
     }
   }
 
-  // Return nothing.
+  // The base theme registers region.tpl.php
+  if ($theme == 'zen') {
+    return array(
+      'region' => array(
+        'arguments' => array('elements' => NULL),
+        //'pattern' => 'region_',
+        'path' => drupal_get_path('theme', 'zen') . '/templates',
+        'template' => 'region',
+      ),
+    );
+  }
+
+  // Else return nothing.
   return array();
 }
 
