@@ -39,9 +39,9 @@ settings[zen_layout]               = zen-columns-liquid
 settings[zen_rebuild_registry]     = 0
 settings[zen_wireframes]           = 0
 
-; Information added by drupal.org packaging script on 2009-10-03
+; Information added by drupal.org packaging script on 2009-10-16
 version = "6.x-2.x-dev"
 core = "6.x"
 project = "zen"
-datestamp = "1254530085"
+datestamp = "1255653476"
 
